fixes for motion events, tabs, and IME